// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IFrame Editor Node IFrame component 1`] = `
<div
  className="obojobo-draft--chunks--iframe viewer pad is-previewing  is-not-bordered is-not-showing  is-controls-enabled  is-not-missing-src is-not-scaled-up"
>
  <div
    className="editor-container"
    style={
      Object {
        "height": "200px",
      }
    }
  >
    <div
      className="iframe-toolbar"
    >
      <span
        aria-hidden={true}
        className="title"
      >
        mockTitle
      </span>
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center properties-button"
      >
        <button
          className="button"
          onClick={[Function]}
        >
          IFrame Properties
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`IFrame Editor Node IFrame renders with no size correctly 1`] = `
<div
  className="obojobo-draft--chunks--iframe viewer pad is-previewing  is-not-bordered is-not-showing  is-controls-enabled  is-not-missing-src is-not-scaled-up"
>
  <div
    className="editor-container"
    style={
      Object {
        "height": "500px",
      }
    }
  >
    <div
      className="iframe-toolbar"
    >
      <span
        aria-hidden={true}
        className="title"
      >
        mockSrc
      </span>
      <div
        className="obojobo-draft--components--button is-not-dangerous align-center properties-button"
      >
        <button
          className="button"
          onClick={[Function]}
        >
          IFrame Properties
        </button>
      </div>
    </div>
  </div>
</div>
`;
